--- a/client/src/index.css
+++ b/client/src/index.css
@@ -297,7 +297,8 @@ nav .logo-container .logo {
 
 /*-------- Chat Display --------*/
 
-.chat-display {
+.chat-display,
+.matches-display {
   padding: 20px;
   height: 60vh;
   overflow-y: auto;
