T-18 Make up in process

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -283,20 +283,22 @@ nav .logo-container .logo {
   color: rgb(255, 255, 255);
 }
 
+.chat-message-header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .img-container {
-  height: 30px;
-  width: 30px;
-  border-radius: 15px;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
   overflow: hidden;
   margin: 10px;
 }
 
 .img-container img {
   width: 100%;
-}
-
-.chat-header-img {
-  width: 50%;
 }
 
 /*-------- Chat Display --------*/
